kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__lambda_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 158
expression: "crate::tests::parsing_expr_string(r#\"lambda\"#)"
---
Node {
    node: Lambda(
        LambdaExpr {
            args: Some(
                Node {
                    node: Arguments {
                        args: [],
                        defaults: [],
                        type_annotation_list: [],
                        ty_list: [],
                    },
                    filename: "",
                    line: 1,
                    column: 6,
                    end_line: 1,
                    end_column: 6,
                },
            ),
            return_type_str: None,
            body: [],
            return_ty: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

