kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__lambda_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 163
expression: "crate::tests::parsing_expr_string(r#\"{lambda a{}\"#)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Lambda(
                                    LambdaExpr {
                                        args: Some(
                                            Node {
                                                node: Arguments {
                                                    args: [
                                                        Node {
                                                            node: Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "a",
                                                                        filename: "",
                                                                        line: 1,
                                                                        column: 8,
                                                                        end_line: 1,
                                                                        end_column: 9,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                            filename: "",
                                                            line: 1,
                                                            column: 8,
                                                            end_line: 1,
                                                            end_column: 9,
                                                        },
                                                    ],
                                                    defaults: [
                                                        None,
                                                    ],
                                                    type_annotation_list: [
                                                        None,
                                                    ],
                                                    ty_list: [
                                                        None,
                                                    ],
                                                },
                                                filename: "",
                                                line: 1,
                                                column: 8,
                                                end_line: 1,
                                                end_column: 9,
                                            },
                                        ),
                                        return_type_str: None,
                                        body: [],
                                        return_ty: None,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 11,
                            },
                        ),
                        value: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 11,
                            end_line: 1,
                            end_column: 11,
                        },
                        operation: Override,
                        insert_index: -1,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 11,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 11,
}

