kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__line_continue_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 22
expression: "crate::tests::parsing_expr_string(\"'abc\\\\ \\ndef\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "'abc\\ \n",
            value: "",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 2,
    end_column: 0,
}

