kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__list_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 5
expression: "crate::tests::parsing_expr_string(\"[\")"
---
Node {
    node: List(
        ListExpr {
            elts: [],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}

